--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <li><a href="#gallery">Gallery</a></li>
             <li><a href="#feature">Freature</a></li>
             <li>
-                <a href="#">Other Links</a>
+                <a href="#" class="menu-btn">Other Links</a>
                 <!--Start Megamenu-->
-                <div class="mega-menu">
+                <div class="mega-menu appear-menu">
                     <div class="image">
                         <img src="image/megamenu.png" alt="">
                     </div>
@@ -916,5 +916,6 @@
         </div>
     </div>
     <!--End Footer-->
+<script src="script.js"></script>
 </body>
 </html>
